# server/src/constants/regexp.ts
@@ -1,0 +1,4 @@
+export const AppRegexp = {
+  Password:
+    /(?=.*[a-zа-я])(?=.*[A-ZА-Я])(?=.*\d)(?=.*[\\~`\][()_=+№;<>!?/|"{}:.,'@#$%^&*-])[a-zA-Zа-яА-яёЁ\d \\~`\][()_=+№;<>!?/|"{}:.,'@#$%^&*-]{6,}/,
+} as const;
