# server/src/modules/user/dto/user-reset-password.request.dto.ts
@@ -1,7 +1,7 @@
 import { ApiProperty } from '@nestjs/swagger';
 import { IsEmail } from 'class-validator';
 
-export class ResetPasswordRequestDto {
+export class UserResetPasswordRequestDto {
   @ApiProperty()
   @IsEmail()
   public email: string;
